# DIRA

./: DIRA_Report_Final.docx  DIRA_methods.docx  ReadMe.txt  build_dataset.py.bak  build_dataset_v3.py  dataset.py  dataset_v2.py  feature_extractor_v2.py  feature_extractor_v3.py  feature_extractor_v4.py  feature_extractor_v7.py  features.py  file.tex  freebayes.txt  predict.py  predict_dira_v3.py  train.py  train_v2.py
dira-extractor-rs/: Cargo.toml  cigar.rs  feature_extractor_v5.py  main.rs
dira-extractor-rs/src/: features.rs  main.rs  region.rs  region.rs.bak  region.rs.bak.2  region.rs.bak.3  region.rs.bak.4
