[package]
name = "dira-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-htslib = { version = "0.49", default-features = false }
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
